--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Just a Fraud Analyst preventing crime</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I grew up in New Jersey the most hated state in America (True Facts). I moved to California in 2016 and I havent thought about moving back.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I enjoy cooking, learning news things, binge watching television shows</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>My dream job is to make an impact in this world</p>
       <h1>Where do you live?</h1> 
-      <p>Details here...</p>
+      <p>I currently reside in the Inland Empire, its not the PCH but it has its perks</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p> I would like to make programs that would help others make their everyday a litle easier.</p>
     </section>
 
     <footer id="footer">
